# High-Level

./: .gitignore  CLAUDE.md  DISPLAY_FIXES.md  README.md  REMOTE_PI_SETUP.md  SSH_SETUP.md  app.py  command.txt  vision.py  vision_onnx.py
firmware/esp32_low_level/: platformio.ini
firmware/esp32_low_level/include/: config.hpp  encoder_isr.hpp  imu_driver.hpp  mecanum.hpp  microros_transport.hpp  motor_driver.hpp  odometry.hpp  pid.hpp  safety.hpp  shared_state.hpp
firmware/esp32_low_level/src/: command_rx_task.cpp  encoder_isr.cpp  imu_driver.cpp  main.cpp  mecanum.cpp  microros_transport.cpp  motion_control_task.cpp  motor_driver.cpp  odometry.cpp  pid.cpp  safety.cpp  sensor_update_task.cpp  telemetry_task.cpp
scripts/: clean_launch_arena.sh  clean_launch_headless.sh  clean_run_arena.sh  run_fleet_phase.sh
src/audix_pkg/: CMakeLists.txt  package.xml
src/audix_pkg/config/: arena_experiment_params.yaml  controllers.yaml  ekf.yaml  joint_names_audix.yaml  mission_params.yaml  obstacles.yaml  warehouse_lanes.yaml  warehouse_missions.yaml  warehouse_robot_params.yaml
src/audix_pkg/launch/: arena_experiment.launch.py  display_rviz.launch.py  full_mission.launch.py  full_mission_fleet.launch.py  full_mission_multibot.launch.py  hardware.launch.py  midterm.launch.py  pi_hardware.launch.py  pi_hardware_mock.launch.py  robot_gazebo.launch.py  scissor_gazebo.launch.py
src/audix_pkg/msg/: FleetStatus.msg  RobotStatus.msg
src/audix_pkg/rviz/: arena_experiment.rviz  config.rviz  full_mission.rviz
src/audix_pkg/scripts/: arena_obstacle_manager.py  arena_roamer.py  arena_spawn_panel.py  arena_spawn_panel_multibot.py  cardinal_motion_debug.py  drive_test.py  ekf_input_adapter.py  fleet_robot_navigator.py  goal_sender_node.py  mecanum_kinematics.py  mission_controller.py  obstacle_avoidance.py  odom_tf_broadcaster.py  publish_robot_description.py  scissor_lift_mapper.py  scissor_slider_gui.py  start_stop_gui.py  start_stop_node.py  warehouse_fleet_manager.py  warehouse_mission_manager.py  warehouse_waypoint_editor.py
src/audix_pkg/srv/: AssignMission.srv  GetRobotStatus.srv  SpawnRobot.srv
src/audix_pkg/urdf/: audix.csv  audix.urdf  audix.urdf.xacro  mission_params.yaml
src/audix_pkg/world/: arena_extreme_10x10.sdf  debug_empty.sdf  warehouse.sdf
